--- a/src/pages/fr/mentions.astro
+++ b/src/pages/fr/mentions.astro
@@ -10,7 +10,7 @@ const pageDescription =
   <h1 class="text-3xl font-bold mb-6 text-center">Mentions légales</h1>
   <div class="prose dark:prose-invert max-w-3xl mx-auto">
     <p>
-      <strong>Éditeur :</strong> ce site est édité par Alexis Fiska dans le cadre d’un portage salarial.
+      <strong>Éditeur :</strong> ce site est édité par Alexis Fiska.
     </p>
     <p>
       <strong>Adresse :</strong> Aucune adresse postale n’est publiée car l’activité est exercée en
